# PasswordManager

./: CMakeLists.txt
TDD/: DataStorage.md  PasswordEncryptor.md  PasswordGenerator.md
include/: DataStorage.h  PasswordBuilder.h  PasswordEncryptor.h  PasswordGenerator.h  SiteData.h  UserData.h
src/: DataStorage.cpp  PasswordEncryptor.cpp  PasswordGenerator.cpp  main.cpp
tests/: DataStorageTests.cpp  PasswordBuilderTests.cpp  PasswordEncryptorTests.cpp  PasswordGeneratorTests.cpp  UserManagerTests.cpp
